filme service, filme controller

--- a/CinemaWebApi/appsettings.json
+++ b/CinemaWebApi/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MysqlDatabase": "server=mysqldb;database=cinemadb;user=root;password=12345"
+    "MysqlDatabase": "server=mysqldb;database=cinemadb;user=natan;password=12345"
   }
 }
